# math

./: CMakeLists.txt  README.md
Plurality/: CMakeLists.txt  Helper.h  Matrix.h  Plurality.cpp  Plurality.h  Plurality_bit.h
